# website

./: .env.example  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  README.md  TAILWIND_MIGRATION_POC.md  build-static-site.sh  build.py  export.py  export_tools.py  main.py  netlify.toml  netlify_formify.py  optimize-css.mjs  optimize-images.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  run-static-export.sh  tailwind.config.js  update-snapshots.ps1  update-snapshots.sh  wp-asset-check.sh
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  deploy.yml  export-static-site.yml  export.yml
docs/: simplystatic-endpoints.json
docs/spikes/: 2026-03-19-lighthouse-audit.md  2026-03-21-wordpress-legacy-and-optimization.md
extra-assets/: whatsapp.js
netlify/edge-functions/: donate.js
netlify/functions/: calendar-ics.js  calendar.js  whatsapp-gate.js
public/: index.html  page-sitemap.xml
public/code-of-conduct/: index.html
public/concerts/: index.html
public/contact-us/: index.html
public/content_block/: index.html
public/faq/: index.html
public/songbook/: index.html
static/: _redirects  content_block-sitemap.xml  mixpanel.js
static/css/: main.css  (+2 more)
templates/: index.html  index2.html  index3.html
tests/: cache-headers.spec.ts  calendar-description.spec.ts  calendar-filter.spec.ts  calendar.spec.ts  donate.spec.ts  hover-utils.ts  mobile-navigation.spec.ts  promo-banner.spec.ts  seo.spec.ts  snapshots.spec.ts
tools/: export_tools.py
(+52 files in other folders)
