[project]
name = "ukulele-tuesday-website"
version = "0.1.0"
description = "Static website for Ukulele Tuesday"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.4",
]

[tool.poe.tasks]
build = "python build.py"
serve = "python -m http.server --directory public"
watch = { "cmd": "poe build", "watch": ["static", "templates"] }
dev = { "sequence": ["build", { "parallel": ["serve", "watch"] }] }

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "watchdog>=4.0.1",
]
